# jarvish-google

./: .env.example  .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  install.sh  jarvish.sh  main.py  pyproject.toml  requirements.txt  sessions_copy.json
config/: app-settings.py  prompt_builder.py  prompts.py
config/prompts/: __init__.py  base.py  coding.py  gmail.py  google_calendar.py  google_drive.py  image_gen.py  skill_management.py  system_os.py  web_search.py
config/skills/nextjs/: SKILL.md
connectors/: connectors-agent-instructions.md  telegram-mcp.py
core/: agent-orchestrator.py  ai-provider.py  core-agent-instructions.md  google_auth.py  memory-manager.py  session-manager.py
searxng/: settings.yml
src/: cli.py  main.py
src/config/: app-settings.py  paths.py  prompt_builder.py
src/config/prompts/: base.py  coding.py  github.py  gmail.py  google_calendar.py  google_drive.py  (+5 more)
src/connectors/: base-connector.py  telegram-mcp.py
src/core/: agent-orchestrator.py  ai-provider.py  database.py  document_reader.py  google_auth.py  mcp_manager.py  memory-manager.py  scheduler.py  session-manager.py
src/tools/: calendar_tool.py  drive_tool.py  exchange_code.py  gmail_tool.py  login_google.py  memory_tool.py  read-webpage-tool.py  search_history_tool.py  skill_tool.py  system_tool.py  tool-registry.py  web-search-tool.py
tools/: coding_tools.py  exchange_code.py  gmail_tool.py  login_google.py  skill_tool.py  system_tool.py  task_tool.py  tools-agent-instructions.md  vision-analyzer-tool.py  weather_tool.py  web-search-tool.py
